# blog_generator

./: main.py  pyproject.toml  requirements.txt
config/: configuration.yaml
exception/: custom_exception.py
generated_blogs/: Demystifying Self-Attention in Transformer Architecture.md  Gradient Boosting in 2026 - The Enduring Power for Structured Data.md  Understanding Self-Attention in Transformer Architecture.md  demystifying_self-attention_a_developers_guide_to_transformer_architectures.md
logger/: __init__.py  custom_logger.py
notebooks/: Understanding Self-Attention in Transformer Architectures.md  basic_research.ipynb  bwa_image.ipynb  improved_research.ipynb  tavily_research.ipynb  tavily_test.ipynb
prompt_library/: prompt_locator.py
schemas/: models.py
utils/: config_loader.py  model_loader.py
workflows/: blog_generator_workflow.py  image_workflow.py
