[project]
name = "blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "langchain-groq>=1.1.2",
    "structlog>=25.5.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["workflows", "api", "config", "schemas", "database", "logger", "exception", "prompt_library"]
exclude = ["notebooks", "logs", "images", "generated_blogs"]